--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -6,20 +6,17 @@
     </head>
 
     <body>
-        <div name="header" class="header">
-            <div class="header-icon header-item-1">
-                HOME MENU
+        <header name="header" class="header">
+            <div class="header-icon">
+                You Suck<br/>Icon
             </div>
-            <div class="header-icon header-item-2">
-                You Suck Icon
+            <div class="header-search">
+                <input type="text" placeholder="Search or Create Questions">
             </div>
-            <div class="header-icon header-item-3">
-                <input type="text" placeholder="Search..">
+            <div class="header-login">
+                <button class="login-button">LOGIN</button>
             </div>
-            <div class="header-icon header-item-4">
-                LOGIN
-            </div>
-        </div>
+        </header>
         <!--
         <form action="http://localhost:8080/index/create-question" method="POST">
             <label>New Question</label>
@@ -31,19 +28,32 @@
         -->
         <div name="main-content" class="main-content">
             <div class="questions-header">
-                <button class="questions-header-init">New Question</button>
-                <button class="questions-header-spoiler">Spoiler</button>
-                <button class="questions-header-sorting">Sorting</button>
+                <div class="create-question-header">
+                    <button class="create-question-button">New Question</button>
+                </div>
+                <div class="questions-sorting-header">
+                    <select name="questions-sorting" class="questions-sorting"> 
+                        <option value="recentlyAdded">Recently Added</option>
+                        <option value="theySuck">The ones that suck more</option>
+                        <option value="youSuck">The ones you suck more</option>
+                    </select>
+                </div>
+                <div class="question-spoiler-header">
+                    <select name="questions-spoiler" class="questions-spoiler"> 
+                        <option value="showAnswers">Show Answers</option>
+                        <option value="hideAnswers">Hide Answers</option>
+                    </select>
+                </div>
             </div>
             {{range .questions}}
                 <div class="questions">
                     <span class="question">{{.Question}}</span>
                     <span class="answer">{{.Answer}}</span>
-                    <div class="buttons">
-                        <button class="it-sucks-button">It Sucks</button>
-                        <button class="you-sucks-button">You Suck</button>
+                    <div class="question-buttons">
+                        <div class="it-sucks-wrapper">
+                            <button class="it-sucks-button">It Sucks or no, You suck</button>
+                        </div>
                     </div>
-                    <hr>
                 </div>
             {{end}}
         </div>
