--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,62 +1,105 @@
+.body {
+    font-family: verdana, arial, helvetica, sans-serif;
+}
+
 
 .header {
-    background-color: #d24848;
+    background-color: #d35f1c;
     width: 100%;
-    display: grid;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .header-icon {
-    padding-left: 10px;
+    padding-left: 15px;
     padding-right: 10px;
 }
 
-.header-item-1 {
-    grid-column: 1;
-    grid-row: 1;
+.header-search {
+    margin: auto;
+    display: grid;
+    width: 50%;
 }
 
-.header-item-2 {
-    grid-column: 2;
-    grid-row: 1;
+input[type=text]{
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+     border-radius: 20px;
+     border: 1px solid #2d9fd9;
+     width: 100%;
+     height: 30px;
+     padding-left: 10px;
+    }
+    
+input[type=text]:focus {
+     outline: none;
+     border: 1px solid #a0d18c;
 }
 
-.header-item-3 {
-    grid-column: 3;
-    grid-row: 1;
+.header-login {
+    display: grid;
+    padding-right: 15px;
 }
 
-.header-item-4 {
-    grid-column: 4;
-    grid-row: 1;
+.login-button {
+    background-color: #ffffff;
+    border: none;
+    color: black;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    border-radius: 12px;
 }
 
 .main-content {
     width: 100%;
     display: block;
+    margin-top: 40px;
 }
 
 .questions-header {
-    margin: auto;
     width: 70%;
-    display: grid;
+    height: 35px;
+    display: flex;
+    flex-direction: row;
+    margin: auto;
 }
 
-.questions-header-init {
-    grid-column: 1;
+.create-question-header {
+    width: 70%
 }
 
-.questions-header-spoiler {
-    grid-column: 6;
+.create-question-button {
+    background-color: #e7811a;
+    border: none;
+    color: black;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    border-radius: 12px;
 }
 
-.questions-header-sorting {
-    grid-column: 7;
+.questions-sorting {
+    background-color: #e7811a;
+    margin: 5px 2px;
+}
+
+.questions-spoiler {
+    background-color: #e7811a;
+    margin: 5px 2px;
 }
 
 .questions {
-    border: #1c1616;
-    border-radius: 10px;
-    border-style: solid;
     margin: auto;
     width: 70%;
     display: grid;
@@ -64,13 +107,13 @@
 }
 
 .question {
-    font-weight: 700;
-    font-size: 1.125rem;
-    line-height: 1.5rem;
+    font-weight: 500;
+    font-size: 1.425rem;
+    line-height: 3.5rem;
 }
 
 .it-sucks-button {
-    width: 50%;
+    width: 100%;
 }
 
 hr {
@@ -82,10 +125,25 @@ span {
     padding-left: 2px;
 }
 
-.buttons {
+.question-buttons {
     display: flex;
+    flex-direction: row;
+    width: 100%;
 }
 
-.you-sucks-button {
-    width: 50%;
+.it-sucks-wrapper {
+    width: 20%
+}
+
+.it-sucks-button {
+    background-color: #FFFFFF;
+    border: none;
+    color: black;
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    border-radius: 12px;
 }
