adding buttons and votes

--- a/templates/createQuestion.html
+++ b/templates/createQuestion.html
@@ -9,7 +9,7 @@
       <div class="form-label">
         <label for="answer">Answer</label>
       </div>
-      <input type="text" class="form-control" id="answer" placeholder="And the best possible answer">
+      <input type="text" class="form-control" id="answer" placeholder="And the best answer you have">
     </div>
     <div class="form-button-area">
       <div>
