adding icons + prettier configs + a few renaming

--- a/templates/createQuestion.html
+++ b/templates/createQuestion.html
@@ -1,22 +1,22 @@
 <form class="create-question">
+  <div>
+    <div class="form-label">
+      <label for="question">Question</label>
+    </div>
+    <input type="text" class="form-control" id="question" placeholder="Tell us the question you were asked!" />
+  </div>
+  <div>
+    <div class="form-label">
+      <label for="answer">Answer</label>
+    </div>
+    <textarea class="form-control" id="answer" placeholder="And the best answer you have"></textarea>
+  </div>
+  <div class="form-button-area">
     <div>
-      <div class="form-label">
-        <label for="question">Question</label>
-      </div>
-      <input type="text" class="form-control" id="question" placeholder="Tell us the question you were asked!">
+      <button type="submit" class="submit-question">Create</button>
     </div>
     <div>
-      <div class="form-label">
-        <label for="answer">Answer</label>
-      </div>
-      <input type="text" class="form-control" id="answer" placeholder="And the best answer you have">
+      <button type="submit" class="cancel-question" hx-get="/questions/cancel" hx-target=".container-header">Cancel</button>
     </div>
-    <div class="form-button-area">
-      <div>
-        <button type="submit" class="submit-question">Create</button>
-      </div>
-      <div>
-        <button type="submit" class="cancel-question" hx-get="/questions/cancel" hx-target=".container-header">Cancel</button>
-      </div>
-    </div>
+  </div>
 </form>
