--- a/templates/home.css
+++ b/templates/home.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'verdana, Arial', sans-serif;
+  font-family: "verdana, Arial", sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
@@ -44,7 +44,7 @@ body.dark-mode {
   width: 50%;
 }
 
-input[type=text] {
+input[type="text"] {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
@@ -53,10 +53,27 @@ input[type=text] {
   height: 30px;
   padding-left: 10px;
 }
-  
-input[type=text]:focus {
-   outline: none;
-   border: 1px solid #e67e22;
+
+input[type="text"]:focus {
+  outline: none;
+  border: 1px solid #e67e22;
+}
+
+textarea {
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  border: 1px solid #d5d5d5;
+  width: 100%;
+  height: 100px;
+  padding-left: 10px;
+  padding-top: 10px;
+  resize: vertical;
+}
+
+textarea:focus {
+  outline: none;
+  border: 1px solid #e67e22;
 }
 
 .dark-mode-toggle {
@@ -143,7 +160,7 @@ input[type=text]:focus {
 
 .create-question input {
   min-width: 90%;
-  padding: 10px;
+  padding: 10px 2px 10px 10px;
 }
 
 .form-label {
@@ -239,4 +256,8 @@ button:hover {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+}
+
+.container > hr:first-of-type {
+  display: none;
 }
