adding more pages and few styles fixes

--- a/templates/createQuestion.html
+++ b/templates/createQuestion.html
@@ -3,17 +3,17 @@
     <div class="form-label">
       <label for="question">Question</label>
     </div>
-    <input type="text" class="form-control" id="question" placeholder="Tell us the question you were asked!" />
+    <input type="text" class="form-control" id="question" name="question" placeholder="Tell us the question you were asked!" />
   </div>
   <div>
     <div class="form-label">
       <label for="answer">Answer</label>
     </div>
-    <textarea class="form-control" id="answer" placeholder="And the best answer you have"></textarea>
+    <textarea class="form-control" id="answer" name="answer" placeholder="And the best answer you have"></textarea>
   </div>
   <div class="form-button-area">
     <div>
-      <button type="submit" class="submit-question">Create</button>
+      <button type="submit" class="submit-question" hx-post="/questions/create" hx-target=".container-header">Create</button>
     </div>
     <div>
       <button type="submit" class="cancel-question" hx-get="/questions/cancel" hx-target=".container-header">Cancel</button>
