--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,14 @@
     <header class="header">
       <div class="header-icon">You Suck<br />Icon</div>
       <div class="header-search">
-        <input type="text" placeholder="Search or Create Questions" />
+        <input
+          type="text"
+          placeholder="Search or Create Questions"
+          name="question"
+          hx-get="/questions/search"
+          hx-trigger="input changed delay:500ms, search"
+          hx-target=".container"
+        />
       </div>
       <div class="header-login">
         <button class="login-button">LOGIN</button>
