--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://kit.fontawesome.com/0aebddf4ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="templates/home.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="templates/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="templates/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="templates/favicon-16x16.png" />
-    <link rel="manifest" href="templates/site.webmanifest" />
+    <link rel="stylesheet" href="static/home.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png" />
+    <link rel="manifest" href="static/site.webmanifest" />
     <title>You SUCK at interviewing</title>
   </head>
 
